--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
 				</section>
 				<section id="block3">
 					<h2>Задача №3</h2>
-					<script>
-						
-					</script>
+					<div class="calc">
+						<div><label>Первое число:</label><input type="text" id="firsts" name="firsts" placeholder="Введите число"/></div>
+						<div><label>Второе число:</label><input type="text" id="seconds" name="seconds" placeholder="Введите число"/></div>
+						<div class="row">
+							<input class="button" type="radio" id="sum" name="sum" value="+"> +
+							<input class="button" type="radio" id="sub" name="sub" value="-"> -
+							<input class="button" type="radio" id="multi" name="multi" value="*"> *
+							<input class="button" type="radio" id="divide" name="divide" value="/"> /
+						</div>
+						<div><label>Результат:</label><input type="text" name="results" placeholder="Ответ"/></div>
+					</div>
 				</section>
 				<section id="block4">
 					<h2>Задача №4</h2>
