--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<title>Задание 6-ой недели</title>
 	<script src="js/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="js/calculator.js"></script>
+	<script src="js/calculator.js"></script>
 </head>
 <body>
 	<div class="layout">
@@ -52,10 +52,10 @@
 						<div><label>Первое число:</label><input type="text" id="firsts" name="firsts" placeholder="Введите число"/></div>
 						<div><label>Второе число:</label><input type="text" id="seconds" name="seconds" placeholder="Введите число"/></div>
 						<div class="row">
-							<input class="button" type="radio" id="sum" name="sum" value="+"> +
-							<input class="button" type="radio" id="sub" name="sub" value="-"> -
-							<input class="button" type="radio" id="multi" name="multi" value="*"> *
-							<input class="button" type="radio" id="divide" name="divide" value="/"> /
+							<input class="button" type="radio" id="sums" name="sums" value="+"> +
+							<input class="button" type="radio" id="subs" name="subs" value="-"> -
+							<input class="button" type="radio" id="multis" name="multis" value="*"> *
+							<input class="button" type="radio" id="divides" name="divides" value="/"> /
 						</div>
 						<div><label>Результат:</label><input type="text" name="results" placeholder="Ответ"/></div>
 					</div>
