--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<title>Задание 6-ой недели</title>
 	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/calculator.js"></script>
 </head>
 <body>
 	<div class="layout">
@@ -139,11 +138,13 @@
 				<section id="block8">
 					<h2>Задача №8</h2>
 					<h3>Первый способ:</h3>
+					<div id="interval"></div>
 					<script>
 						function NumbersInterval() {
 							var i = 1;
 							var timerId = setInterval(function() {
 								console.log(i);
+								document.getElementById('interval').innerHTML = i;
 								if (i == 20) clearInterval(timerId);
 								i++;
 							}, 100);
@@ -152,11 +153,13 @@
 						NumbersInterval();
 					</script>
 					<h3>Второй способ:</h3>
+					<div id="timeout"></div>
 					<script>
 						function NumbersTimeout() {
 							var i = 1;
 							var timerId = setTimeout(function go() {
 								console.log(i);
+								document.getElementById('timeout').innerHTML = i;
 								if (i < 20) setTimeout(go, 100);
 								i++;
 							}, 100);
@@ -173,5 +176,6 @@
 			</div>
 		</footer>
 	</div>
+	<script src="js/calculator.js"></script>
 </body>
 </html>
